--- a/public/test.html
+++ b/public/test.html
@@ -19,11 +19,24 @@
 <body>
 <header>
 </header>
+
+<div id="panel" class="side-panel">
+    <button class="side-btn" id="pause">
+        <span class="material-symbols-outlined">pause</span>
+    </button>
+    <button class="side-btn" id="finish-early">
+        <span class="material-symbols-outlined">fast_forward</span>
+    </button>
+    <button class="side-btn" id="cancel">
+        <span class="material-symbols-outlined">close</span>
+    </button>
+</div>
+
 <div class="container">
     <div class="block">
         <div id="timer">00:00</div>
         <div id="okno">
-            <canvas class="canva"></canvas>
+            <canvas class="canvas"></canvas>
             <div class="finish">
                 <div class="notification">
                     <h1>Тест пройден!</h1>
@@ -69,6 +82,24 @@
 </div>
 
 <div class="overlay" id="overlay"></div>
+
+<div class="pause-overlay" id="pauseOverlay">
+    <div class="pause-window">
+        <p>⏸ Пауза</p>
+        <button id="resumeBtn">Продолжить</button>
+    </div>
+</div>
+
+<div class="abort-overlay" id="abortOverlay">
+    <div class="abort-window">
+        <p>❓ Хотите отменить тест?</p>
+        <div class="abort-actions">
+            <button id="abortYes">Да</button>
+            <button id="abortNo">Нет</button>
+        </div>
+    </div>
+</div>
+
 <script src="script_test.js"></script>
 </body>
 </html>
