--- a/public/test.html
+++ b/public/test.html
@@ -81,21 +81,29 @@
     </div>
 </div>
 
-<div class="overlay" id="overlay"></div>
-
-<div class="pause-overlay" id="pauseOverlay">
-    <div class="pause-window">
+<div class="overlay" id="pauseOverlay">
+    <div class="overlay-window">
         <p>⏸ Пауза</p>
         <button id="resumeBtn">Продолжить</button>
     </div>
 </div>
 
-<div class="abort-overlay" id="abortOverlay">
-    <div class="abort-window">
+<div class="overlay" id="abortOverlay">
+    <div class="overlay-window">
         <p>❓ Хотите отменить тест?</p>
         <div class="abort-actions">
             <button id="abortYes">Да</button>
             <button id="abortNo">Нет</button>
+        </div>
+    </div>
+</div>
+
+<div class="overlay" id="finishOverlay">
+    <div class="overlay-window">
+        <p>❗ Вы уверены, что хотите закончить тест раньше?</p>
+        <div style="display:flex; gap: 15px; margin-top: 20px;">
+            <button id="finishYes">Да</button>
+            <button id="finishNo">Нет</button>
         </div>
     </div>
 </div>
