--- a/public/test.html
+++ b/public/test.html
@@ -5,6 +5,7 @@
     <title>Сложная РДО</title>
     <link rel="stylesheet" href="styles/style_test.css">
     <link rel="stylesheet" href="styles/sidepanel.css">
+    <link rel="stylesheet" href="styles/settings.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -75,6 +76,37 @@
             <p>ТЕСТИРОВАНИЕ ЗАВЕРШИТСЯ АВТОМАТИЧЕСКИ.</p>
 
         </div>
+
+        <div class="settings">
+            <h2>Настройки</h2>
+
+            <div class="setting-row">
+                <label for="duration">⏱ Длительность теста (минуты):</label>
+                <input type="number" id="duration" min="1" max="60" value="15">
+            </div>
+
+            <div class="setting-row">
+                <label for="sensitivity">🎯 Чувствительность к нажатиям (%):
+                    <span id="sensitivityValue">50</span>
+                </label>
+                <input type="range" id="sensitivity" min="0" max="100" value="50">
+            </div>
+
+            <div class="setting-row">
+                <label for="acceleration">⚡ Ускорение (%):
+                    <span id="accelerationValue">10</span>
+                </label>
+                <input type="range" id="acceleration" min="0" max="100" value="10">
+            </div>
+
+            <div class="setting-row">
+                <label for="interval">📈 Интервал ускорения (сек.):</label>
+                <input type="number" id="interval" step="0.05" min="0.05" max="30" value="1.5">
+            </div>
+        </div>
+
+
+
         <div id="buttons">
             <button class="btn" id="start">НАЧАТЬ ТЕСТ</button>
         </div>
