--- a/public/test.html
+++ b/public/test.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <title>Сложная РДО</title>
     <link rel="stylesheet" href="styles/style_test.css">
-    <link rel="stylesheet" href="styles/sidepanel.css">
-    <link rel="stylesheet" href="styles/settings.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 </head>
@@ -86,7 +79,7 @@
             </div>
 
             <div class="setting-row">
-                <label for="sensitivity">🎯 Чувствительность к нажатиям (%):
+                <label for="sensitivity">🎯 Чувствительность (%):
                     <span id="sensitivityValue">50</span>
                 </label>
                 <input type="range" id="sensitivity" min="0" max="100" value="50">
@@ -100,7 +93,7 @@
             </div>
 
             <div class="setting-row">
-                <label for="interval">📈 Интервал ускорения (сек.):</label>
+                <label for="interval">📈 Интервал ускорения (мин.):</label>
                 <input type="number" id="interval" step="0.05" min="0.05" max="30" value="1.5">
             </div>
         </div>
