--- a/public/test.html
+++ b/public/test.html
@@ -12,8 +12,10 @@
 </head>
 <body>
 <header>
+    <!-- это основной и единственный html моей чудо игрушки -->
 </header>
 
+<!-- боковая панелька во время теста -->
 <div id="panel" class="side-panel">
     <button class="side-btn" id="pause">
         <span class="material-symbols-outlined">pause</span>
@@ -28,9 +30,13 @@
 
 <div class="container">
     <div class="block">
+        <!-- показывает сколько вы уже играете (после запуска появляется) -->
         <div id="timer">00:00</div>
         <div id="okno">
+            <!-- в нем все отрисовывается -->
             <canvas class="canvas"></canvas>
+
+            <!-- отображается при завершении теста -->
             <div class="finish">
                 <div class="notification">
                     <h1>Тест пройден!</h1>
@@ -51,6 +57,7 @@
     </div>
 
     <div class="info">
+        <!-- правила (видны до начала) -->
         <div class="rules">
             <h1>ПРАВИЛА</h1>
             <p>НА ЭКРАНЕ ПОЯВИТСЯ ОКРУЖНОСТЬ, ПО
@@ -70,6 +77,7 @@
 
         </div>
 
+        <!-- настройки теста (видны до начала) -->
         <div class="settings">
             <h2>Настройки</h2>
 
@@ -99,13 +107,14 @@
         </div>
 
 
-
+        <!-- кнопка старт (видна до начала) -->
         <div id="buttons">
             <button class="btn" id="start">НАЧАТЬ ТЕСТ</button>
         </div>
     </div>
 </div>
 
+<!-- всплывающие окна для кнопок боковой панели -->
 <div class="overlay" id="pauseOverlay">
     <div class="overlay-window">
         <p>⏸ Пауза</p>
@@ -133,6 +142,6 @@
     </div>
 </div>
 
-<script src="script_test.js"></script>
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
